# ariadne-nyc

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
app/: DEPLOY.md  knip.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
app/scripts/: debug-browser.ts  route-cli.ts
app/src/: app.css  app.d.ts  app.html
app/src/lib/: directions.ts  i18n.ts  isochrone.ts  lang.ts
app/src/lib/adapters/: feed-mta-outages.ts  feed-weather.ts  geocoder.ts  geolocation.ts  llm.ts  pedestrian-router.ts  transit-router.ts  tts.ts
app/src/lib/components/: ActiveRecord.svelte  ExampleQueries.svelte  FeedStatus.svelte  LoadingOverlay.svelte  QueryLog.svelte  RouteMap.svelte  SearchBar.svelte  SessionBar.svelte  SkipLink.svelte  WayfindingStrip.svelte
app/src/lib/domain/: geo.ts  narration.ts  poi.ts  profile.ts  route.ts
app/src/lib/services/: narration-service.ts  (+3 more)
app/src/routes/: +layout.svelte  +page.svelte
app/static/: demo-queries.json  examples  nyc-boroughs.json  pkg
app/tests/e2e/: demo-queries-2.spec.ts  demo-queries.spec.ts  queries-30.spec.ts  queries.spec.ts
pipeline/: __init__.py  __main__.py
pipeline/sources/: fetch_open_data.py
pipeline/stages/: assemble.py
router/: Cargo.toml  DECISIONS.md  README.md
router/examples/: profile-generic_pedestrian.json  profile-low_vision.json  profile-manual_wheelchair.json
router/examples/browser-demo/: index.html
router/examples/node-demo/: demo.cjs  demo.mjs
router/src/: api.rs  cost.rs  graph.rs  lib.rs  profile.rs  routing.rs
router/tests/: diagnose.rs  diagnose2.rs  diagnose3.rs  diagnose4.rs  nyc_binary.rs  plausibility.rs  profile_diff.rs  routing.rs
router/tests/fixtures/: small_osw.geojson
scripts/: setup-model.sh
(+6 files in other folders)
