[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ariadne-nyc"
version = "0.1.0"
description = "Reproducible OpenSidewalks v0.3-conformant NYC pedestrian graph pipeline"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "osmnx==2.0.1",
    "geopandas==1.0.1",
    "shapely==2.0.6",
    "networkx==3.4.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "click==8.1.8",
    "pandas==2.2.3",
    "pyproj==3.7.0",
    "scipy==1.14.1",
    "jsonschema==4.23.0",
    "tqdm==4.67.1",
    "sodapy==2.2.0",
    "rtree==1.3.0",
    "numpy==2.1.3",
    "fiona==1.10.1",
    "rasterio>=1.4.4",
    "py3dep>=0.19.0",
]

[project.scripts]
pipeline = "pipeline.__main__:main"

[tool.setuptools.packages.find]
include = ["pipeline*"]
