[package]
name = "unweaver-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly port of Unweaver's profile-based routing pattern for OpenSidewalks data"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = { version = "0.6", features = ["serde-1"] }
geojson = "0.24"
ordered-float = { version = "4", features = ["serde"] }
thiserror = "2"
rstar = "0.12"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[profile.release]
opt-level = "s"   # optimize for binary size
